--- a/style.yml
+++ b/style.yml
@@ -3,6 +3,8 @@ center:
   - -73.98
   - 40.83
 zoom: 11.72
+projection:
+  name: albers
 sources:
   v:
     type: vector
@@ -28,4 +30,12 @@ layers:
     source: v
     source-layer: nad
     paint:
-      heatmap-radius: 6
+      heatmap-radius: 
+        - interpolate
+        - - exponential
+          - 2
+        - - zoom
+        - 0
+        - 4
+        - 24
+        - 64
